# veco

idea/talk/: main.tex
lib/: CMakeLists.txt
lib/src/: CMakeLists.txt  config.cmake.h
lib/src/core/: CMakeLists.txt  hasproperties.cpp  hasproperties.h  object.cpp  object.h  objectview.cpp  objectview.h  properties.h  property.cpp  property.h  python.cpp  python.h  scene.cpp  scene.h  script.py  tag.cpp  tag.h  tagview.cpp  tagview.h  view.cpp  view.h
lib/src/objects/: CMakeLists.txt
lib/src/tags/: CMakeLists.txt  scripttag.cpp  scripttag.h
lib/test/: CMakeLists.txt
lib/test/unit/: CMakeLists.txt  common.cpp  common.h  test_object.cpp  test_scripttag.cpp  test_tag.cpp
